crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef struct PamojaBmp280 PamojaBmp280;
typedef struct PamojaHdc1080 PamojaHdc1080;
typedef struct PamojaI2cBus PamojaI2cBus;
typedef struct PamojaI2cPart PamojaI2cPart;
typedef struct PamojaIna219 PamojaIna219;
typedef struct PamojaOpt3001 PamojaOpt3001;
typedef struct PamojaString PamojaString;
typedef struct PamojaTmp117 PamojaTmp117;
typedef struct {
  int16_t raw_temperature;
  int32_t micro_celsius;
  int8_t alarm_high;
  int8_t alarm_low;
  uint8_t resolution_bits;
} PamojaDs18b20Reading;
typedef struct {
  uint8_t reset;
  uint8_t bus_range;
  uint8_t gain;
  uint8_t bus_adc;
  uint8_t shunt_adc;
  uint8_t mode;
} PamojaIna219Config;
typedef struct {
  float celsius;
  uint32_t pascals;
  float hectopascals;
} PamojaBmp280Reading;
typedef struct {
  uint16_t dig_t1;
  int16_t dig_t2;
  int16_t dig_t3;
  uint16_t dig_p1;
  int16_t dig_p2;
  int16_t dig_p3;
  int16_t dig_p4;
  int16_t dig_p5;
  int16_t dig_p6;
  int16_t dig_p7;
  int16_t dig_p8;
  int16_t dig_p9;
} PamojaBmp280Coefficients;
typedef struct {
  uint16_t temperature_raw;
  uint16_t humidity_raw;
  int32_t milli_celsius;
  float celsius;
  uint32_t milli_percent;
  float relative_humidity;
} PamojaHdc1080Measurement;
typedef struct {
  uint8_t software_reset;
  uint8_t heater;
  uint8_t sequential;
  uint8_t battery_low;
  uint8_t temperature_resolution_bits;
  uint8_t humidity_resolution_bits;
} PamojaHdc1080Config;
typedef struct {
  uint8_t range_number;
  uint8_t long_conversion;
  uint8_t mode;
  uint8_t overflow;
  uint8_t conversion_ready;
  uint8_t flag_high;
  uint8_t flag_low;
  uint8_t latched_window;
  uint8_t active_high;
  uint8_t mask_exponent;
  uint8_t fault_count;
} PamojaOpt3001Config;
typedef struct {
  uint8_t temperature;
  uint8_t pressure;
  uint8_t filter;
} PamojaBmp280Settings;
typedef struct {
  int16_t raw;
  int32_t micro_celsius;
  float celsius;
} PamojaTmp117Reading;
typedef struct {
  uint8_t high;
  uint8_t low;
} PamojaTmp117Alerts;
typedef struct {
  uint8_t long_conversion;
  uint8_t range_number;
} PamojaOpt3001Settings;
typedef struct {
  uint16_t raw;
  uint32_t milli_lux;
  float lux;
} PamojaOpt3001Reading;
typedef struct {
  uint8_t temperature_resolution_bits;
  uint8_t humidity_resolution_bits;
} PamojaHdc1080Settings;
typedef struct {
  uint32_t shunt_milliohms;
  uint32_t max_microamps;
  uint32_t current_lsb_microamps;
  PamojaIna219Config config;
} PamojaIna219Settings;
typedef struct {
  int16_t shunt;
  uint16_t bus;
  int16_t current;
  uint16_t power;
  uint32_t current_lsb_microamps;
  int32_t shunt_microvolts;
  uint32_t bus_millivolts;
  int32_t current_microamps;
  uint32_t power_microwatts;
  uint8_t math_overflow;
} PamojaIna219Reading;
PamojaStatus pamoja_ds18b20_parse_w1_slave(const char *text, PamojaDs18b20Reading *out_reading);
PamojaStatus pamoja_ds18b20_w1_slave_text(const uint8_t *bytes,
                                          uintptr_t len,
                                          PamojaString **out_text);
PamojaStatus pamoja_ina219_address(uint8_t a1, uint8_t a0, uint8_t *out_address);
uint16_t pamoja_ina219_config_bits(PamojaIna219Config config);
PamojaStatus pamoja_ina219_config_from_bits(uint16_t bits, PamojaIna219Config *out_config);
uint32_t pamoja_ina219_conversion_micros(PamojaIna219Config config);
uint32_t pamoja_ina219_adc_conversion_micros(uint8_t code);
uint16_t pamoja_ina219_gain_range_millivolts(uint8_t code);
uint32_t pamoja_ads1115_conversion_micros(uint8_t data_rate);
PamojaBmp280Settings pamoja_bmp280_settings_default(void);
PamojaStatus pamoja_bmp280_new(const PamojaI2cBus *bus,
                               uint8_t address,
                               PamojaBmp280Settings settings,
                               PamojaBmp280 **out_sensor);
PamojaStatus pamoja_bmp280_init(PamojaBmp280 *sensor);
PamojaStatus pamoja_bmp280_measure(PamojaBmp280 *sensor, PamojaBmp280Reading *out_reading);
bool pamoja_bmp280_coefficients(const PamojaBmp280 *sensor,
                                PamojaBmp280Coefficients *out_coefficients);
void pamoja_bmp280_free(PamojaBmp280 *sensor);
PamojaI2cPart *pamoja_bmp280_sim_part(uint8_t address);
PamojaI2cPart *pamoja_bmp280_sim_reporting(uint8_t address, float celsius, float hectopascals);
PamojaStatus pamoja_bmp280_sim_calibration(uint8_t *out_calibration);
PamojaStatus pamoja_bmp280_sim_burst(uint8_t *out_burst);
PamojaStatus pamoja_bmp280_sim_burst_for(float celsius, float hectopascals, uint8_t *out_burst);
PamojaStatus pamoja_tmp117_new(const PamojaI2cBus *bus,
                               uint8_t address,
                               uint8_t averaging,
                               PamojaTmp117 **out_sensor);
PamojaStatus pamoja_tmp117_init(PamojaTmp117 *sensor);
PamojaStatus pamoja_tmp117_measure(PamojaTmp117 *sensor, PamojaTmp117Reading *out_reading);
PamojaStatus pamoja_tmp117_set_alert_limits(PamojaTmp117 *sensor,
                                            float high_celsius,
                                            float low_celsius);
PamojaStatus pamoja_tmp117_alerts(PamojaTmp117 *sensor, PamojaTmp117Alerts *out_alerts);
bool pamoja_tmp117_silicon_revision(const PamojaTmp117 *sensor, uint8_t *out_revision);
void pamoja_tmp117_free(PamojaTmp117 *sensor);
PamojaI2cPart *pamoja_tmp117_sim_part(uint8_t address);
PamojaI2cPart *pamoja_tmp117_sim_reporting(uint8_t address, float celsius);
PamojaOpt3001Settings pamoja_opt3001_settings_default(void);
PamojaStatus pamoja_opt3001_new(const PamojaI2cBus *bus,
                                uint8_t address,
                                PamojaOpt3001Settings settings,
                                PamojaOpt3001 **out_sensor);
PamojaStatus pamoja_opt3001_init(PamojaOpt3001 *sensor);
PamojaStatus pamoja_opt3001_measure(PamojaOpt3001 *sensor, PamojaOpt3001Reading *out_reading);
PamojaStatus pamoja_opt3001_set_limits(PamojaOpt3001 *sensor,
                                       uint32_t low_milli_lux,
                                       uint32_t high_milli_lux);
PamojaStatus pamoja_opt3001_configuration(const PamojaOpt3001 *sensor,
                                          PamojaOpt3001Config *out_config);
void pamoja_opt3001_free(PamojaOpt3001 *sensor);
PamojaI2cPart *pamoja_opt3001_sim_part(uint8_t address);
PamojaI2cPart *pamoja_opt3001_sim_reporting(uint8_t address, float lux);
PamojaHdc1080Settings pamoja_hdc1080_settings_default(void);
PamojaStatus pamoja_hdc1080_new(const PamojaI2cBus *bus,
                                PamojaHdc1080Settings settings,
                                PamojaHdc1080 **out_sensor);
PamojaStatus pamoja_hdc1080_init(PamojaHdc1080 *sensor);
PamojaStatus pamoja_hdc1080_measure(PamojaHdc1080 *sensor,
                                    PamojaHdc1080Measurement *out_measurement);
PamojaStatus pamoja_hdc1080_heater(PamojaHdc1080 *sensor, bool on);
PamojaStatus pamoja_hdc1080_configuration(const PamojaHdc1080 *sensor,
                                          PamojaHdc1080Config *out_config);
void pamoja_hdc1080_free(PamojaHdc1080 *sensor);
PamojaI2cPart *pamoja_hdc1080_sim_part(void);
PamojaI2cPart *pamoja_hdc1080_sim_reporting(float celsius, float relative_humidity);
PamojaIna219Settings pamoja_ina219_settings_default(void);
PamojaStatus pamoja_ina219_new(const PamojaI2cBus *bus,
                               uint8_t address,
                               PamojaIna219Settings settings,
                               PamojaIna219 **out_sensor);
PamojaStatus pamoja_ina219_init(PamojaIna219 *sensor);
PamojaStatus pamoja_ina219_measure(PamojaIna219 *sensor, PamojaIna219Reading *out_reading);
uint32_t pamoja_ina219_current_lsb(const PamojaIna219 *sensor);