bindings/dotnet/src/Pamoja.Native/Interop/NativeMethods.SensorDrivers.cs

using System.Runtime.InteropServices;

namespace Pamoja.Native.Interop;

/// <summary>
/// The P/Invoke declarations for the sensor drivers that run over an I2C bus, their simulated
/// parts, and the DS18B20 read through the kernel's 1-Wire files, mirroring <c>pamoja.h</c>
/// one-to-one.
/// </summary>
/// <remarks>
/// Split from the other declarations only to keep each file readable; this is the same
/// <see cref="NativeMethods"/> class and the same low-level escape hatch. The BME280 driver
/// sits with its decoders in the sensing file. Every part must be updated together with the
/// generated header.
/// </remarks>
public static partial class NativeMethods
{
    /// <summary>The INA219 configuration register's power-on value.</summary>
    public const ushort Ina219ConfigReset = 0x399F;

    /// <summary>Returns the I2C address an INA219's A1 and A0 pin codes select.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina219_address(byte a1, byte a0, out byte outAddress);

    /// <summary>Assembles an INA219 configuration register value.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina219_config_bits(PamojaIna219Config config);

    /// <summary>Parses an INA219 configuration register value.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina219_config_from_bits(
        ushort bits,
        out PamojaIna219Config outConfig);

    /// <summary>Returns how long one INA219 conversion cycle takes, in microseconds.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina219_conversion_micros(PamojaIna219Config config);

    /// <summary>Returns how long one INA219 conversion takes at an ADC code, in microseconds.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina219_adc_conversion_micros(byte code);

    /// <summary>Returns the shunt-voltage range an INA219 gain code selects, in millivolts.</summary>
    [LibraryImport(Library)]
    public static partial ushort pamoja_ina219_gain_range_millivolts(byte code);

    /// <summary>Returns how long an ADS1115 conversion takes at a data-rate code, in microseconds.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ads1115_conversion_micros(byte dataRate);

    /// <summary>Decodes the text the kernel serves for a DS18B20.</summary>
    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    public static partial PamojaStatus pamoja_ds18b20_parse_w1_slave(
        string text,
        out PamojaDs18b20Reading outReading);

    /// <summary>Renders the text the kernel serves for a DS18B20 scratchpad it read cleanly.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ds18b20_w1_slave_text(
        ReadOnlySpan<byte> bytes,
        nuint len,
        out IntPtr outText);

    /// <summary>Returns the settings a BMP280 driver starts with.</summary>
    [LibraryImport(Library)]
    public static partial PamojaBmp280Settings pamoja_bmp280_settings_default();

    /// <summary>Creates a BMP280 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_new(
        IntPtr bus,
        byte address,
        PamojaBmp280Settings settings,
        out IntPtr outSensor);

    /// <summary>Resets, identifies, and configures a BMP280.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_init(IntPtr sensor);

    /// <summary>Runs one forced BMP280 measurement and compensates it.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_measure(IntPtr sensor, out PamojaBmp280Reading outReading);

    /// <summary>Copies the trimming coefficients a BMP280 driver read at initialization.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_bmp280_coefficients(IntPtr sensor, out PamojaBmp280Coefficients outCoefficients);

    /// <summary>Releases a BMP280 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_bmp280_free(IntPtr sensor);

    /// <summary>Creates a simulated BMP280 holding a real part's trimming and measurement.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_bmp280_sim_part(byte address);

    /// <summary>Creates a simulated BMP280 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_bmp280_sim_reporting(byte address, float celsius, float hectopascals);

    /// <summary>Copies the 24 trimming bytes a simulated BMP280 holds.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_sim_calibration(Span<byte> outCalibration);

    /// <summary>Copies the six data registers a simulated BMP280 holds.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_sim_burst(Span<byte> outBurst);

    /// <summary>Builds the six data registers a simulated BMP280 holds for a reading.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_bmp280_sim_burst_for(
        float celsius,
        float hectopascals,
        Span<byte> outBurst);

    /// <summary>Creates a TMP117 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_new(IntPtr bus, byte address, byte averaging, out IntPtr outSensor);

    /// <summary>Identifies and configures a TMP117.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_init(IntPtr sensor);

    /// <summary>Runs one TMP117 conversion and reads the temperature.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_measure(IntPtr sensor, out PamojaTmp117Reading outReading);

    /// <summary>Writes the TMP117's high and low limits.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_set_alert_limits(IntPtr sensor, float highCelsius, float lowCelsius);

    /// <summary>Reads the TMP117's alert flags.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_tmp117_alerts(IntPtr sensor, out PamojaTmp117Alerts outAlerts);

    /// <summary>Reports the silicon revision a TMP117 driver read at initialization.</summary>
    [LibraryImport(Library)]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool pamoja_tmp117_silicon_revision(IntPtr sensor, out byte outRevision);

    /// <summary>Releases a TMP117 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_tmp117_free(IntPtr sensor);

    /// <summary>Creates a simulated TMP117 reading its default temperature.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_tmp117_sim_part(byte address);

    /// <summary>Creates a simulated TMP117 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_tmp117_sim_reporting(byte address, float celsius);

    /// <summary>Returns the settings an OPT3001 driver starts with.</summary>
    [LibraryImport(Library)]
    public static partial PamojaOpt3001Settings pamoja_opt3001_settings_default();

    /// <summary>Creates an OPT3001 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_new(
        IntPtr bus,
        byte address,
        PamojaOpt3001Settings settings,
        out IntPtr outSensor);

    /// <summary>Identifies and configures an OPT3001.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_init(IntPtr sensor);

    /// <summary>Runs one OPT3001 conversion and reads the illuminance.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_measure(IntPtr sensor, out PamojaOpt3001Reading outReading);

    /// <summary>Writes the OPT3001's low and high limits, in millilux.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_set_limits(IntPtr sensor, uint lowMilliLux, uint highMilliLux);

    /// <summary>Copies the configuration an OPT3001 driver writes.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_opt3001_configuration(IntPtr sensor, out PamojaOpt3001Config outConfig);

    /// <summary>Releases an OPT3001 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_opt3001_free(IntPtr sensor);

    /// <summary>Creates a simulated OPT3001 reading its default illuminance.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_opt3001_sim_part(byte address);

    /// <summary>Creates a simulated OPT3001 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_opt3001_sim_reporting(byte address, float lux);

    /// <summary>Returns the settings an HDC1080 driver starts with.</summary>
    [LibraryImport(Library)]
    public static partial PamojaHdc1080Settings pamoja_hdc1080_settings_default();

    /// <summary>Creates an HDC1080 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_new(
        IntPtr bus,
        PamojaHdc1080Settings settings,
        out IntPtr outSensor);

    /// <summary>Identifies and configures an HDC1080.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_init(IntPtr sensor);

    /// <summary>Runs one HDC1080 acquisition of both channels.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_measure(IntPtr sensor, out PamojaHdc1080Measurement outMeasurement);

    /// <summary>Switches the HDC1080's heater on or off.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_heater(IntPtr sensor, [MarshalAs(UnmanagedType.U1)] bool on);

    /// <summary>Copies the configuration an HDC1080 driver writes.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_hdc1080_configuration(IntPtr sensor, out PamojaHdc1080Config outConfig);

    /// <summary>Releases an HDC1080 driver. Passing null is a no-op.</summary>
    [LibraryImport(Library)]
    public static partial void pamoja_hdc1080_free(IntPtr sensor);

    /// <summary>Creates a simulated HDC1080 reading its default temperature and humidity.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_hdc1080_sim_part();

    /// <summary>Creates a simulated HDC1080 that reads what it is asked to.</summary>
    [LibraryImport(Library)]
    public static partial IntPtr pamoja_hdc1080_sim_reporting(float celsius, float relativeHumidity);

    /// <summary>Returns the settings an INA219 driver starts with.</summary>
    [LibraryImport(Library)]
    public static partial PamojaIna219Settings pamoja_ina219_settings_default();

    /// <summary>Creates an INA219 driver on a bus.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina219_new(
        IntPtr bus,
        byte address,
        PamojaIna219Settings settings,
        out IntPtr outSensor);

    /// <summary>Resets, configures, and calibrates an INA219.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina219_init(IntPtr sensor);

    /// <summary>Runs one INA219 conversion and reads every result.</summary>
    [LibraryImport(Library)]
    public static partial PamojaStatus pamoja_ina219_measure(IntPtr sensor, out PamojaIna219Reading outReading);

    /// <summary>Returns the current step an INA219 driver programs.</summary>
    [LibraryImport(Library)]
    public static partial uint pamoja_ina219_current_lsb(IntPtr sensor);
